[Keerthana|Ginette] #Tech - yarn audit fix - 2

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -84,4 +84,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
       - name: Running audit check
-        run: yarn audit
+        run: yarn audit --groups dependencies
