--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "husky": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint": "13.13.1",
+    "stylelint-config-sass-guidelines": "8.0.0",
+    "stylelint-config-standard": "22.0.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
