--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,5 @@
 {
   "extends": "stylelint-config-sass-guidelines",
-  "rules": { "string-quotes": "double" }
+  "rules": { "string-quotes": "double" ,
+    "selector-class-pattern": null}
 }
