--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: CI Test and Publish Workflow
 
 on:
   push:
@@ -30,33 +30,7 @@ jobs:
         with:
           name: Static Build folder
           path: |
-            ./dist
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "yarn"
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Running Tests
-        run: yarn test
-      - run: yarn build
-      - name: Upload test artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: coverage
-          path: |
-            ./coverage
-      - name: Monitor coverage
-        if: github.event_name == 'pull_request'
-        uses: slavcodev/coverage-monitor-action@1.2.0
-        with:
-          github_token: ${{ secrets.GT_TOKEN }}
-          clover_file: "./coverage/clover.xml"
+            ./build
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -85,3 +59,44 @@ jobs:
           cache: "yarn"
       - name: Running audit check
         run: yarn audit --groups dependencies
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - name: Running Tests
+        run: yarn test
+      - run: yarn build
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: |
+            ./coverage
+      - name: Monitor coverage
+        if: github.event_name == 'pull_request'
+        uses: slavcodev/coverage-monitor-action@1.2.0
+        with:
+          github_token: ${{ secrets.GT_TOKEN }}
+          clover_file: "./coverage/clover.xml"
+  publish:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - security
+      - test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
