--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,9 @@ jobs:
             ./build
   lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -42,15 +45,7 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Running eslint
-        run: yarn lint:check
-      - name: Running prettier
-        run: yarn prettier:check
-      - name: Running stylelint
-        run: yarn stylelint:check
-      - name: Running stylelint
-        run: yarn stylelint:check
-      - name: Further linting Super-Linter
+      - name: Linting with Super-Linter
         uses: github/super-linter@v4.8.1
         env:
           VALIDATE_MARKDOWN: false
@@ -58,6 +53,9 @@ jobs:
         
   security:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -69,6 +67,9 @@ jobs:
         run: yarn audit --groups dependencies
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -91,10 +92,13 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: slavcodev/coverage-monitor-action@1.2.0
         with:
-          github_token: ${{ secrets.GT_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           clover_file: "./coverage/clover.xml"
   publish:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     needs:
       - lint
       - security
