--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Running Tests
-        run: yarn test
+        run: yarn test:coverage
       - run: yarn build
       - name: Upload test artifacts
         uses: actions/upload-artifact@v2
