54 - fixing hardcoded issue

--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
       "<rootDir>/src/**/*.{spec,test}.{js,jsx}"
     ],
     "testEnvironment": "jsdom",
-    "testRunner": "/Users/ginettv/project/digitale/dati-semantic-frontend/node_modules/jest-circus/runner.js",
+    "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
     "transform": {
       "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
