54 - adding super-linter script to run locally

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,7 +50,8 @@ jobs:
         env:
           VALIDATE_MARKDOWN: false
           VALIDATE_BASH: false
-        
+          FILTER_REGEX_INCLUDE: '.*(src|\.github)/.*'
+          FILTER_REGEX_EXCLUDE: '.*.(min.css)'
   security:
     runs-on: ubuntu-latest
     strategy:
