--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,5 +6,8 @@
       "color-named": null,
       "rule-empty-line-before": null,
       "no-missing-end-of-source-newline": null,
-    "selector-class-pattern": null}
+    "selector-class-pattern": null},
+  "ignoreFiles": [
+    "src/styles/bootstrap-italia.min.css"
+  ]
 }
