--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,6 +52,9 @@ jobs:
           VALIDATE_BASH: false
           FILTER_REGEX_INCLUDE: '.*(src|\.github)/.*'
           FILTER_REGEX_EXCLUDE: '.*.(min.css)'
+          JAVASCRIPT_ES_CONFIG_FILE: '../../.eslintrc.json'
+          JAVASCRIPT_DEFAULT_STYLE: 'prettier'
+          CSS_FILE_NAME: '../../.stylelintrc.json'
   security:
     runs-on: ubuntu-latest
     strategy:
