--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -109,6 +109,7 @@ jobs:
           clover_file: "./coverage/clover.xml"
   publish:
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
     permissions:
       contents: read
       packages: write
