--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -51,7 +55,7 @@ jobs:
           VALIDATE_MARKDOWN: false
           VALIDATE_BASH: false
           FILTER_REGEX_INCLUDE: '.*(src|\.github)/.*'
-          FILTER_REGEX_EXCLUDE: '.*.(min.css)'
+          FILTER_REGEX_EXCLUDE: '.*.(min.css|ttf|woff|woff2|svg|txt|md)'
           JAVASCRIPT_ES_CONFIG_FILE: '../../.eslintrc.json'
           JAVASCRIPT_DEFAULT_STYLE: 'prettier'
           CSS_FILE_NAME: '../../.stylelintrc.json'
@@ -105,19 +109,33 @@ jobs:
           clover_file: "./coverage/clover.xml"
   publish:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
+    if: github.event_name != 'pull_request'
+    permissions:
+      contents: read
+      packages: write
     needs:
+      - build
       - lint
       - security
       - test
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Log in to the Github Container registry
+        uses: docker/login-action@v1
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "yarn"
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
