54 - moving tag construction to metadata action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -131,11 +131,12 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value={{branch}}-{{date 'YYYYMMDD'}}-{{sha}}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: |
-            type=raw,value={{branch}}-{{date 'YYYYMMDD'}}-{{sha}}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
