--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -132,7 +132,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           labels: |
-            "org.opencontainers.image.source.branch=$(git rev-parse --abbrev-ref HEAD)"
+            "org.opencontainers.image.source.branch=${{GITHUB_REF##*/}}"
           tags: |
             type=raw,value={{date 'YYYYMMDD'}}-${{github.run_number}}-{{sha}}
       - name: Build and push Docker image
