--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -128,7 +128,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]${git rev-parse --abbrev-ref HEAD}"
+        run: echo "##[set-output name=branch;]$(git rev-parse --abbrev-ref HEAD)"
         id: extract_branch
       - name: Extract metadata (tags, labels) for Docker
         id: meta
