--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope":"off"
+        "react/react-in-jsx-scope":"off",
+        "no-undef": "off"
     }
 }
