48 - Specify permissions explicity for test stage

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,6 +81,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       issues: write
     strategy:
       matrix:
