--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
+    "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -74,11 +75,14 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "prettier": "^2.4.1",
+    "mountebank": "^2.5.0",
+    "mountebank-helper": "^1.2.1",
     "react-dev-utils": "^11.0.3",
     "webpack-dev-server": "3.11.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "start-mock-server": "node mock-server/src/index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "test:coverage": "node scripts/test.js --coverage --watchAll=false",
