#47 - runs FE app locally using docker-compose.
Co-authored-by: SrinivasanTarget <srinivasan.sekar1990@gmail.com>
Co-authored-by: KeerthanaR29 <keerthana.r@thoughtworks.com>

--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start-mock-server": "node ./src/index.js"
   },
   "devDependencies": {
     "mountebank": "^2.4.0",
