#47 -Added virtuoso and backend service to docker compose
Co-authored-by: Srinivasan <srinivasan.sekar1990@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - 7001:80
     networks:
-      - react
+      - ndc
   mock-server:
     container_name: mockserver
     build:
@@ -20,7 +20,23 @@ services:
     ports:
       - 7002:5001
     networks:
-      - react
+      - ndc
+  virtuoso:
+    image: tenforce/virtuoso
+    ports:
+      - 8890:8890
+    environment:
+      - DBA_PASSWORD=myDbaPassword
+      - SPARQL_UPDATE=true
+      - DEFAULT_GRAPH=http://www.ndc.com/test-graph
+    networks:
+      - ndc
+  backend:
+    image: ghcr.io/teamdigitale/dati-semantic-backend:20211104-42-313b969
+    ports:
+      - 8080:8080
+    networks:
+      - ndc
 networks:
-  react:
+  ndc:
     driver: bridge
