--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^7.0.2",
     "identity-obj-proxy": "3.0.0",
     "mini-css-extract-plugin": "0.11.3",
+    "node-fetch": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "6.0.1",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -32,7 +33,6 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -51,11 +51,8 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@svgr/webpack": "5.5.0",
-    "webpack": "4.44.2",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "5.5.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "eslint": "^7.11.0",
@@ -74,11 +71,14 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "prettier": "^2.4.1",
     "mountebank": "^2.5.0",
     "mountebank-helper": "^1.2.1",
+    "prettier": "^2.4.1",
     "react-dev-utils": "^11.0.3",
-    "webpack-dev-server": "3.11.1"
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
