--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -135,7 +135,7 @@ jobs:
             org.opencontainers.image.source.branch=${{ steps.extract_branch.outputs.branch }}
           tags: |
             type=raw,value={{date 'YYYYMMDD'}}-${{github.run_number}}-{{sha}}
-            type=raw value=latest
+            type=raw, value=latest
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
