--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
     "fs-extra": "^9.0.1",
+    "history": "^5.1.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
@@ -37,6 +38,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "react-router-dom": "^6.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^10.0.5",
