--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "5.2.7",
+    "design-react-kit": "^3.3.3",
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
@@ -76,6 +77,7 @@
     "mountebank": "^2.5.0",
     "mountebank-helper": "^1.2.1",
     "prettier": "^2.4.1",
+    "prop-types": "^15.7.2",
     "react-dev-utils": "^11.0.3",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
