--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "bootstrap-italia": "^1.4.3",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "5.2.7",
