--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "html-webpack-plugin": "4.5.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "0.11.3",
     "node-fetch": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "6.0.1",
+    "owl.carousel": "^2.3.4",
     "pnp-webpack-plugin": "1.7.0",
+    "popper.js": "^1.16.1",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
