--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.5",
+    "lodash.debounce": "^4.0.8",
     "mountebank": "^2.5.0",
     "mountebank-helper": "^1.2.1",
     "prettier": "^2.4.1",
