run deploy post publish is successfull

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -154,6 +154,7 @@ jobs:
       - lint
       - security
       - test
+      - publish
     steps:
       - uses: convictional/trigger-workflow-and-wait@v1.3.0
         with:
