extract tags from publish job

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -112,6 +112,8 @@ jobs:
       - lint
       - security
       - test
+    outputs:
+      tag: ${{ steps.meta.outputs.tags[0] }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -160,4 +162,4 @@ jobs:
           workflow_file_name: update-config.yaml
           ref: yaml-editor
           wait_interval: 20
-          inputs: '{"serviceName": "dati-semantic-frontend", "imageWithNewTag": "ghcr.io/teamdigitale/dati-semantic-frontend:latest"}'
+          inputs: '{"serviceName": "dati-semantic-frontend", "imageWithNewTag": "${{ needs.publish.outputs.tag }}"}'
