--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -151,6 +151,12 @@ jobs:
     needs:
       - publish
     steps:
+      - name: build image
+        id: extractImage
+        run: |
+          IMAGE="$REGISTRY/$IMAGE_NAME"
+          TAG="$(date +'%Y%m%d')-${{github.run_number}}-$(git rev-parse --short HEAD)"
+          echo "##[set-output name=imageName;]${IMAGE}:${TAG}"
       - uses: convictional/trigger-workflow-and-wait@v1.3.0
         with:
           owner: teamdigitale
@@ -159,4 +165,4 @@ jobs:
           workflow_file_name: update-config.yaml
           ref: yaml-editor
           wait_interval: 20
-          inputs: '{"serviceName": "dati-semantic-frontend", "imageWithNewTag": "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:{{date 'YYYYMMDD'}}-${{github.run_number}}-{{sha}}"}'
+          inputs: '{"serviceName": "dati-semantic-frontend", "imageWithNewTag": "${{ steps.extractImage.outputs.imageName }}'
