--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -109,8 +109,8 @@ jobs:
       packages: write
     needs:
       - build
-      - lint
       - security
+      - lint
       - test
     steps:
       - name: Checkout repository
@@ -143,3 +143,29 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    permissions:
+      contents: read
+      packages: write
+    needs:
+      - publish
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: build image
+        id: extractImage
+        run: |
+          IMAGE="$REGISTRY/$IMAGE_NAME"
+          TAG="$(date +'%Y%m%d')-${{github.run_number}}-$(git rev-parse --short HEAD)"
+          echo "##[set-output name=imageName;]${IMAGE}:${TAG}"
+      - uses: convictional/trigger-workflow-and-wait@v1.3.0
+        with:
+          owner: teamdigitale
+          repo: dati-semantic-kubernetes
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          workflow_file_name: update-config.yaml
+          ref: dev
+          wait_interval: 20
+          inputs: '{"serviceName": "dati-semantic-frontend", "imageWithNewTag": "${{ steps.extractImage.outputs.imageName }}"}'
