--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^17.0.2",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^6.0.1",
+    "readline": "^1.3.0",
     "resolve": "1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^10.0.5",
