--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           files: Dockerfile
           policy: dockerfile-security.rego
-  test:
+  unit-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -92,7 +92,7 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Running Tests
+      - name: Running unit tests
         run: yarn test:coverage
       - run: yarn build
       - name: Upload test artifacts
@@ -101,6 +101,27 @@ jobs:
           name: coverage
           path: |
             ./coverage
+  ui-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - name: Run ui tests
+        run: yarn run test:e2e
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: logs
+          path: logs           
   publish:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
