--- a/package.json
+++ b/package.json
@@ -1,185 +1,193 @@
 {
-  "name": "digitale",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "7.16.0",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "babel-loader": "8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-react-app": "^10.0.0",
-    "bfj": "^7.0.2",
-    "bootstrap-italia": "^1.4.3",
-    "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "css-loader": "5.2.7",
-    "design-react-kit": "^3.3.3",
-    "dotenv": "10.0.0",
-    "dotenv-expand": "5.1.0",
-    "file-loader": "6.2.0",
-    "fs-extra": "^9.0.1",
-    "history": "^5.1.0",
-    "html-webpack-plugin": "4.5.0",
-    "husky": "7.0.4",
-    "identity-obj-proxy": "3.0.0",
-    "jquery": "^3.6.0",
-    "mini-css-extract-plugin": "0.11.3",
-    "node-fetch": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "6.0.1",
-    "owl.carousel": "^2.3.4",
-    "pnp-webpack-plugin": "1.7.0",
-    "popper.js": "^1.16.1",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
-    "prompts": "2.4.2",
-    "react": "^17.0.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dom": "^17.0.2",
-    "react-refresh": "^0.9.0",
-    "react-router-dom": "^6.0.1",
-    "readline": "^1.3.0",
-    "resolve": "1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^10.0.5",
-    "semver": "7.3.5",
-    "style-loader": "2.0.0",
-    "stylelint": "14.0.1",
-    "stylelint-config-sass-guidelines": "9.0.0",
-    "stylelint-config-standard": "24.0.0",
-    "terser-webpack-plugin": "4.2.3",
-    "ts-pnp": "1.2.0",
-    "url-loader": "4.1.1",
-    "web-vitals": "^2.1.2"
-  },
-  "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@svgr/webpack": "5.5.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "27.3.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "5.0.0",
-    "eslint-webpack-plugin": "^2.6.0",
-    "jest": "27.3.1",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "1.0.0",
-    "mountebank": "^2.5.0",
-    "mountebank-helper": "^1.2.1",
-    "prettier": "^2.5.0",
-    "prop-types": "^15.7.2",
-    "react-dev-utils": "^11.0.3",
-    "webpack": "4.46.0",
-    "webpack-dev-server": "3.11.1",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "6.4.1"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "start-mock-server": "node mock-server/src/index.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "test:coverage": "node scripts/test.js --coverage --watchAll=false",
-    "lint": "yarn eslint ./src",
-    "prepare": "husky install",
-    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
-    "lint:check": "eslint './src/**/*.{ts,tsx,js,jsx}'",
-    "prettier:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
-    "prettier:check": "prettier --check './src/**/*.{ts,tsx,js,jsx}'",
-    "postinstall": "sh talisman/talisman-precommit.sh",
-    "stylelint:check": "stylelint './src/**/*.{scss,css}'",
-    "stylelint:fix": "stylelint --fix './src/**/*.{scss,css}'"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/**/*.lazy.js",
-      "!src/index.js"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    "name": "digitale",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "7.16.0",
+        "@testing-library/jest-dom": "^5.15.1",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
+        "babel-loader": "8.2.3",
+        "babel-plugin-named-asset-import": "^0.3.7",
+        "babel-preset-react-app": "^10.0.0",
+        "bfj": "^7.0.2",
+        "bootstrap-italia": "^1.4.3",
+        "camelcase": "^6.2.1",
+        "case-sensitive-paths-webpack-plugin": "2.4.0",
+        "css-loader": "5.2.7",
+        "design-react-kit": "^3.3.3",
+        "dotenv": "10.0.0",
+        "dotenv-expand": "5.1.0",
+        "file-loader": "6.2.0",
+        "fs-extra": "^9.0.1",
+        "history": "^5.1.0",
+        "html-webpack-plugin": "4.5.0",
+        "husky": "7.0.4",
+        "identity-obj-proxy": "3.0.0",
+        "jquery": "^3.6.0",
+        "mini-css-extract-plugin": "0.11.3",
+        "node-fetch": "^3.0.0",
+        "optimize-css-assets-webpack-plugin": "6.0.1",
+        "owl.carousel": "^2.3.4",
+        "pnp-webpack-plugin": "1.7.0",
+        "popper.js": "^1.16.1",
+        "postcss-flexbugs-fixes": "4.2.1",
+        "postcss-loader": "3.0.0",
+        "postcss-normalize": "8.0.1",
+        "postcss-preset-env": "6.7.0",
+        "postcss-safe-parser": "5.0.2",
+        "prompts": "2.4.2",
+        "react": "^17.0.2",
+        "react-app-polyfill": "^2.0.0",
+        "react-dom": "^17.0.2",
+        "react-refresh": "^0.9.0",
+        "react-router-dom": "^6.0.1",
+        "readline": "^1.3.0",
+        "resolve": "1.20.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass-loader": "^10.0.5",
+        "semver": "7.3.5",
+        "style-loader": "2.0.0",
+        "stylelint": "14.0.1",
+        "stylelint-config-sass-guidelines": "9.0.0",
+        "stylelint-config-standard": "24.0.0",
+        "terser-webpack-plugin": "4.2.3",
+        "ts-pnp": "1.2.0",
+        "url-loader": "4.1.1",
+        "web-vitals": "^2.1.2"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    "devDependencies": {
+        "@babel/register": "^7.16.0",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+        "@svgr/webpack": "5.5.0",
+        "@wdio/cli": "^7.16.10",
+        "@wdio/jasmine-framework": "^7.16.6",
+        "@wdio/local-runner": "^7.16.10",
+        "@wdio/spec-reporter": "^7.16.9",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "27.3.1",
+        "chromedriver": "^96.0.0",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-flowtype": "^5.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^25.3.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-testing-library": "5.0.0",
+        "eslint-webpack-plugin": "^2.6.0",
+        "jest": "27.3.1",
+        "jest-circus": "26.6.0",
+        "jest-resolve": "26.6.0",
+        "jest-watch-typeahead": "1.0.0",
+        "prettier": "^2.5.0",
+        "prop-types": "^15.7.2",
+        "react-dev-utils": "^11.0.3",
+        "wdio-chromedriver-service": "^7.2.2",
+        "webdriverio": "^7.16.10",
+        "webpack": "4.46.0",
+        "webpack-dev-server": "3.11.1",
+        "webpack-manifest-plugin": "2.2.0",
+        "workbox-webpack-plugin": "6.4.1"
     },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "proxy": "http://localhost:8080"
+    "scripts": {
+        "start": "node scripts/start.js",
+        "start-mock-server": "node mock-server/src/index.js",
+        "build": "node scripts/build.js",
+        "test": "node scripts/test.js",
+        "test:coverage": "node scripts/test.js --coverage --watchAll=false",
+        "test:e2e": "wdio run wdio.conf.js",
+        "lint": "yarn eslint ./src",
+        "prepare": "husky install",
+        "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'",
+        "lint:check": "eslint './src/**/*.{ts,tsx,js,jsx}'",
+        "prettier:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
+        "prettier:check": "prettier --check './src/**/*.{ts,tsx,js,jsx}'",
+        "postinstall": "sh talisman/talisman-precommit.sh",
+        "stylelint:check": "stylelint './src/**/*.{scss,css}'",
+        "stylelint:fix": "stylelint --fix './src/**/*.{scss,css}'",
+        "wdio": "wdio run wdio.conf.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "jest": {
+        "roots": [
+            "<rootDir>/src"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx}",
+            "!src/**/*.lazy.js",
+            "!src/index.js"
+        ],
+        "setupFiles": [
+            "react-app-polyfill/jsdom"
+        ],
+        "setupFilesAfterEnv": [
+            "<rootDir>/src/setupTests.js"
+        ],
+        "testMatch": [
+            "<rootDir>/src/**/__tests__/**/*.{js,jsx}",
+            "<rootDir>/src/**/*.{spec,test}.{js,jsx}"
+        ],
+        "testEnvironment": "jsdom",
+        "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
+        "transform": {
+            "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
+            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+            "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+        },
+        "transformIgnorePatterns": [
+            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+            "^.+\\.module\\.(css|sass|scss)$"
+        ],
+        "modulePaths": [],
+        "moduleNameMapper": {
+            "^react-native$": "react-native-web",
+            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+        },
+        "moduleFileExtensions": [
+            "web.js",
+            "js",
+            "web.ts",
+            "ts",
+            "web.tsx",
+            "tsx",
+            "json",
+            "web.jsx",
+            "jsx",
+            "node"
+        ],
+        "watchPlugins": [
+            "jest-watch-typeahead/filename",
+            "jest-watch-typeahead/testname"
+        ],
+        "resetMocks": true
+    },
+    "babel": {
+        "presets": [
+            "react-app"
+        ]
+    },
+    "proxy": "http://localhost:8080"
 }
