make publish pipeline to depend on proper jobs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -132,7 +132,8 @@ jobs:
       - build
       - security
       - lint
-      - test
+      - unit-test
+      - ui-test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
