--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,7 @@
       "selector-class-pattern": null
   },
   "ignoreFiles": [
-    "src/styles/bootstrap-italia.min.css"
+    "src/styles/bootstrap-italia.min.css",
+    "src/markdown/**.md"
   ]
 }
