--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.2",
+        "react-markdown": "^7.1.1",
         "react-refresh": "^0.9.0",
         "react-router-dom": "^6.0.1",
         "readline": "^1.3.0",
