--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
         "workbox-webpack-plugin": "6.4.1"
     },
     "scripts": {
-        "start": "node scripts/start.js",
+        "start": "./env.sh && mv env-config.js ./public/ && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
         "build": "node scripts/build.js",
         "test": "node scripts/test.js",
