--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server {
   listen 8080;
+  add_header X-Frame-Options "SAMEORIGIN";
   location / {
     root   /etc/nginx/html;
     index  index.html index.htm;
