--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,23 +1,31 @@
-name: Security tests
+name: Nuclei - DAST Scan
 
 on:
-  schedule:
-    - cron: "5 * * * *"
+    schedule:
+      - cron: '0 0 * * *'
+    workflow_dispatch:
 
 jobs:
-  zap_scan:
+  nuclei-scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
-          ref: main
-      - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.3.0
+          go-version: 1.17
+
+      - name: Nuclei - DAST Scan
+        uses: projectdiscovery/nuclei-action@main
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
-          target: 'https://ndc-dev.apps.cloudpub.testedev.istat.it/'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-aj'
+          target: https://ndc-dev.apps.cloudpub.testedev.istat.it/
+
+      - name: GitHub Workflow artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: nuclei.log
+          path: nuclei.log
+
+      - name: GitHub Security Dashboard Alerts update
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: nuclei.sarif
