--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 8080;
   add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-Content-Type-Options nosniff;
   location / {
     root   /etc/nginx/html;
     index  index.html index.htm;
