--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -6,26 +6,21 @@ on:
     workflow_dispatch:
 
 jobs:
-  nuclei-scan:
+  zap_scan:
     runs-on: ubuntu-latest
+    name: Scan the webapplication
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          go-version: 1.17
+          ref: main
 
-      - name: Nuclei - DAST Scan
-        uses: projectdiscovery/nuclei-action@main
+      - name: ZAP Scan
+        uses: zaproxy/action-api-scan@v0.1.0
         with:
-          target: https://ndc-dev.apps.cloudpub.testedev.istat.it/
-
-      - name: GitHub Workflow artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: nuclei.log
-          path: nuclei.log
-
-      - name: GitHub Security Dashboard Alerts update
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: nuclei.sarif
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'owasp/zap2docker-stable'
+          format: openapi
+          target: 'https://ndc-dev.apps.cloudpub.testedev.istat.it/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
