--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -16,7 +16,7 @@ jobs:
           ref: main
 
       - name: ZAP Scan
-        uses: zaproxy/action-api-scan@v0.1.0
+        uses: zaproxy/action-full-scan@v0.3.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable'
