--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@babel/register": "^7.16.5",
         "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@svgr/webpack": "5.5.0",
+        "@types/k6": "^0.35.2",
         "@wdio/cli": "^7.16.12",
         "@wdio/jasmine-framework": "^7.16.11",
         "@wdio/local-runner": "^7.16.12",
@@ -85,6 +86,7 @@
         "jest-circus": "27.4.5",
         "jest-resolve": "27.4.5",
         "jest-watch-typeahead": "1.0.0",
+        "k6": "^0.0.0",
         "prettier": "^2.5.1",
         "prop-types": "^15.7.2",
         "react-dev-utils": "^11.0.3",
