--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 8080;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options nosniff;
-  add_header Content-Security-Policy "default-src 'none'; script-src 'self'; script-src-elem 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src 'self'; manifest-src 'self';" always;
+  add_header Content-Security-Policy "default-src 'none'; script-src 'self'; script-src-elem 'self' 'unsafe-inline'; style-src 'self'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src 'self'; manifest-src 'self';" always;
   location / {
     root   /etc/nginx/html;
     index  index.html index.htm;
