--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "prettier": "^2.5.1",
         "prop-types": "^15.7.2",
         "react-dev-utils": "^11.0.3",
+        "swagger-ui-react": "^4.1.3",
         "wdio-chromedriver-service": "^7.2.2",
         "webdriverio": "^7.16.11",
         "webpack": "4.46.0",
