Add X-Robots-Tag none for non prod envs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,13 @@
+map $host $x_robots_tag {
+  default "none";
+  "~*schema.gov.it" "all";
+}
 server {
   listen 8080;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options nosniff;
   add_header Content-Security-Policy "default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';" always;
+  add_header X-Robots-Tag $x_robots_tag;
   location / {
     root   /etc/nginx/html;
     index  index.html index.htm;
