--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=http://localhost:80808788544
+API_URL=
 SPARQL_ENDPOINT_URL=http://localhost:8890/sparql
 IMAGE_INLINE_SIZE_LIMIT=0
 INLINE_RUNTIME_CHUNK=false
