webpac cli test 3

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.16.5",
+        "@babel/core": "7.20.2",
+        "@babel/preset-env": "^7.20.2",
         "@babel/runtime": "^7.20.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "babel-loader": "8.3.0",
+        "babel-loader": "9.1.0",
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "^10.0.1",
         "bfj": "^7.0.2",
@@ -58,12 +59,10 @@
         "terser-webpack-plugin": "4.2.3",
         "ts-pnp": "1.2.0",
         "url-loader": "4.1.1",
-        "web-vitals": "^2.1.2",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "29.3.1",
-        "@babel/register": "^7.18.9"
+        "web-vitals": "^2.1.2"
     },
     "devDependencies": {
+        "@babel/register": "^7.18.9",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
         "@svgr/webpack": "5.5.0",
         "@types/k6": "^0.41.0",
@@ -71,6 +70,8 @@
         "@wdio/jasmine-framework": "^7.16.11",
         "@wdio/local-runner": "^7.16.12",
         "@wdio/spec-reporter": "^7.16.11",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "29.3.1",
         "chromedriver": "^106.0.1",
         "eslint": "^7.11.0",
         "eslint-config-prettier": "^8.3.0",
