--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SPARQL_ENDPOINT_URL=http://localhost:8890/sparql
 IMAGE_INLINE_SIZE_LIMIT=0
 INLINE_RUNTIME_CHUNK=false
 MATOMO_SITE_ID=35
+MAINTENANCEALERTS=
