--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ API_URL=
 SPARQL_ENDPOINT_URL=http://localhost:8890/sparql
 IMAGE_INLINE_SIZE_LIMIT=0
 INLINE_RUNTIME_CHUNK=false
+MAINTENANCEALERTS=
 MATOMO_SITE_ID=35
